--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
-    "express": "^4.13.4",
-    "md5": "^2.1.0"
+    "express": "^4.18.2",
+    "md5": "^2.1.0",
+    "node": "^19.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
